--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,11 @@ body {
     filter: var(--svg-color);
 }
 
-h1{
+h1 {
     font-size: 5rem;
 }
 
-h2{
+h2 {
     font-size: 4rem;
 }
 
@@ -45,12 +45,17 @@ h3 {
     font-size: 1.5rem;
 }
 
-h5{
-    font-size: 1.2rem;
+h4 {
+    font-size: 1.3rem;
     margin: 0;
 }
 
-h6{
+h5 {
+    font-size: 1.1rem;
+    margin: 0;
+}
+
+h6 {
     font-size: 1rem;
     margin: 0;
 }
@@ -63,7 +68,7 @@ p {
     display: grid;
     height: 100vh;
     width: 100vw;
-    grid-template-columns: 1fr 3fr 2fr;
+    grid-template-columns: 1fr 4fr 1.5fr;
     grid-template-rows: 1fr;
 }
 
@@ -71,7 +76,6 @@ p {
     margin: 20px;
     margin-top: 0px;
     display: flex;
-    width: 216px;
     flex-direction: column;
 }
 
@@ -111,6 +115,7 @@ p {
     justify-content: center;
     background-color: var(--primary-color);
     padding: 10px 0;
+
     box-shadow: var(--box-shadow);
 }
 
@@ -149,8 +154,7 @@ p {
 .content {
     display: flex;
     flex-direction: column;
-    /* height: 90vh; */
-    min-width: 60vw;
+    min-width: 647px;
     margin: 20px 0;
     margin-top: 40px;
     gap: 30px;
@@ -183,11 +187,11 @@ p {
     align-items: center;
 }
 
-.card:hover{
+.card:hover {
     box-shadow: none;
 }
 
-.card .technology-usage h5{
+.card .technology-usage h5 {
     width: 100px;
     margin: 0;
 }
@@ -204,7 +208,7 @@ p {
     filter: var(--svg-js);
 }
 
-.technologies img{
+.technologies img {
     min-width: 40px;
     min-height: 40px;
 
@@ -232,7 +236,7 @@ p {
     box-shadow: var(--box-shadow);
 }
 
-.co-workers-container:hover{
+.co-workers-container:hover {
     box-shadow: none;
 }
 
@@ -245,15 +249,15 @@ p {
 }
 
 .co-worker img {
-    width: clamp(5rem,100%,8rem);
-    height: clamp(5rem,100%,8rem);
+    width: clamp(5rem, 100%, 8rem);
+    height: clamp(5rem, 100%, 8rem);
     /* max-width: 8rem; */
     /* max-height: 8rem; */
     border-radius: 100%;
     margin: 10px;
 }
 
-.co-worker:hover{
+.co-worker:hover {
     scale: 1.1;
     cursor: pointer;
 }
@@ -279,7 +283,7 @@ p {
     min-width: 630px;
 }
 
-.recent-project-container:hover{
+.recent-project-container:hover {
     box-shadow: none;
 }
 
@@ -294,23 +298,24 @@ p {
 .recent-projects h3 {
     height: 40px;
 }
-.projects img{
+
+.projects img {
     width: 20px;
     height: auto;
 }
 
-.recent-projects h5{
+.recent-projects h5 {
     margin: 10px;
     font-weight: 700;
 }
 
-.projects h6{
+.projects h6 {
     width: 120px;
     text-align: center;
     padding: 10px;
 }
 
-.recent-projects a{
+.recent-projects a {
     display: flex;
     gap: 4px;
     padding: 10px;
@@ -321,6 +326,297 @@ p {
     color: var(--font-color);
 }
 
-.recent-projects img{
+.recent-projects h4 {
+    text-align: center;
+}
+
+.recent-projects img {
     filter: var(--svg-color);
+}
+
+/* content row end */
+
+/* user bar start */
+
+.user-bar {
+    margin: 20px;
+}
+
+.user-profile {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.user-profile>div {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.user-profile i {
+    font-size: 1.4rem;
+}
+
+.pfp {
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+}
+
+.svg-container {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    background-color: var(--primary-color);
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+}
+
+.svg-container img {
+    width: 30px;
+    height: 30px;
+    filter: var(--svg-color);
+}
+
+.trending {
+    display: grid;
+    margin: 10px 0;
+    grid-template-rows: 40px 1fr;
+}
+
+.trending-container {
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    justify-items: center;
+    background-color: var(--primary-color);
+    border-radius: 15px;
+}
+
+.user {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin: 20px;
+}
+
+.user img {
+    width: 80px;
+    height: 80px;
+    border-radius: 100%;
+}
+
+
+.to-do {
+    display: grid;
+    grid-template-rows: 40px 1fr;
+    gap: 20px;
+}
+
+.to-do-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.to-do-noti {
+    background-color: var(--primary-color);
+    padding: 5px;
+    border-radius: 100%;
+}
+
+.to-do img {
+    width: 40px;
+    height: 40px;
+    filter: var(--svg-color);
+}
+
+.to-do-noti img {
+    width: 30px;
+    height: 30px;
+    filter: var(--svg-color);
+}
+
+.to-do-container,
+.to-do-container-add {
+    background-color: var(--primary-color);
+    padding: 10px;
+    border-radius: 15px;
+    box-shadow: var(--box-shadow);
+}
+
+.to-do-info {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    align-items: center;
+}
+
+.to-do-container-add {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+@media (max-width:1352px) {
+    .options-container h5 {
+        display: none;
+    }
+
+    .title img {
+        display: none;
+    }
+
+    .title h1 {
+        font-size: 2vw;
+    }
+
+    .main-container {
+        grid-template-columns: auto 2fr 1fr;
+    }
+}
+
+@media (max-width:1100px) {
+    .main-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .content {
+        margin: 20px;
+    }
+
+    .title img {
+        display: block;
+    }
+
+    .user-profile {
+        position: absolute;
+        right: 20px;
+        top: 35px;
+    }
+
+    .title h1 {
+        font-size: 2rem;
+    }
+
+    .side-bar {
+        margin: 20px;
+    }
+
+    .to-do-info {
+        display: flex;
+        justify-content: center;
+    }
+
+    .options {
+        display: flex;
+        gap: 3vw;
+    }
+
+    .options-container{
+        justify-content: space-around;
+    }
+    .options .log-out {
+        margin: 0;
+        justify-self: center;
+        align-self: center;
+    }
+
+    .technologies-card-container {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        width: auto;
+    }
+
+    .technology-usage {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .content {
+        width: auto;
+        min-width: 100px;
+    }
+
+    .co-workers {
+        min-width: 100px;
+    }
+
+    .card .technology-usage h5 {
+        width: auto;
+    }
+
+    .percentage {
+        display: none;
+    }
+
+    .projects {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        align-content: end;
+        justify-content: end;
+    }
+
+    .project-name {
+        justify-self: end;
+    }
+
+    .recent-project-container {
+        min-width: 100px;
+    }
+
+    .co-workers-container {
+        min-width: 100px;
+    }
+
+    .co-worker img {
+        width: 9vw;
+        height: auto;
+    }
+
+    .trending-container {
+        grid-template-columns: repeat(auto-fit, minmax(254px, 1fr));
+        grid-template-rows: repeat(auto-fit, minmax(80px, 1fr));
+    }
+
+    .user-profile{
+        display: flex;
+        gap: 10px;
+    }
+    .to-do{
+        margin: 20px;
+    }
+
+    .side-bar-option h5{
+        display: block;
+    }
+}
+
+@media (max-width:870px){
+    .options h5{
+        display: none;
+    }
+
+    .options{
+        width: 100%;
+        justify-content: space-around;
+    }
+}
+
+@media (max-width:530px){
+
+    html{
+        overflow: visible;
+    }
+    .title img {
+        display: none;
+    }
+
+    .user-settings img,
+    .user-settings .svg-container{
+        display: none;
+    }
 }
