Added hover to trending users

--- a/css/style.css
+++ b/css/style.css
@@ -398,6 +398,11 @@ p {
     box-shadow: none;
 }
 
+.trending .user:hover{
+    cursor: pointer;
+    scale: 1.1;
+}
+
 .user {
     display: flex;
     align-items: center;
